test/force-app/main/default/objects/Assumption_Set__c/Assumption_Set__c.object-meta.xml
<CustomObject>
    <label>Assumption Set</label>
    <nameField>
        <label>Assumption Set Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Assumption Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>