test/force-app/main/default/objects/Assumption_Set__c/fields/Active_PreTax_Loss_rate__c.field-meta.xml
<CustomField>
    <fullName>Active_PreTax_Loss_rate__c</fullName>
    <label>Active Pre-Tax Loss rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>