test/force-app/main/default/objects/Assumption_Set__c/fields/Annual_Asset_Management__c.field-meta.xml
<CustomField>
    <fullName>Annual_Asset_Management__c</fullName>
    <label>Annual Asset Management</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>