test/force-app/main/default/objects/Assumption_Set__c/fields/Annual_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Annual_Insurance__c</fullName>
    <label>Insurance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>