test/force-app/main/default/objects/Assumption_Set__c/fields/Asset_Life_Years__c.field-meta.xml
<CustomField>
    <fullName>Asset_Life_Years__c</fullName>
    <label>Asset Life (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>