test/force-app/main/default/objects/Assumption_Set__c/fields/Asset_Management_Escalation__c.field-meta.xml
<CustomField>
    <fullName>Asset_Management_Escalation__c</fullName>
    <label>Asset Management Escalation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>