test/force-app/main/default/objects/Assumption_Set__c/fields/Assumption_Set_Status__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Set_Status__c</fullName>
    <label>Assumption Set Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Draft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>