test/force-app/main/default/objects/Assumption_Set__c/fields/Assumption_Set_Use__c.field-meta.xml
<CustomField>
    <fullName>Assumption_Set_Use__c</fullName>
    <label>Assumption Set Use</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DSD Internal</fullName>
                <default>true</default>
                <label>DSD Internal</label>
            </value>
            <value>
                <fullName>Partner Portal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>