test/force-app/main/default/objects/Assumption_Set__c/fields/Availability__c.field-meta.xml
<CustomField>
    <fullName>Availability__c</fullName>
    <label>Availability</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>