test/force-app/main/default/objects/Assumption_Set__c/fields/Bonus_Depreciation_Toggle__c.field-meta.xml
<CustomField>
    <fullName>Bonus_Depreciation_Toggle__c</fullName>
    <label>Bonus Depreciation Toggle</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>