test/force-app/main/default/objects/Assumption_Set__c/fields/Book_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Book_Depreciation__c</fullName>
    <label>Book Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>