test/force-app/main/default/objects/Assumption_Set__c/fields/Book_Useful_Life_Years__c.field-meta.xml
<CustomField>
    <fullName>Book_Useful_Life_Years__c</fullName>
    <label>Book Useful Life (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>