test/force-app/main/default/objects/Assumption_Set__c/fields/Canopy_percentage__c.field-meta.xml
<CustomField>
    <fullName>Canopy_percentage__c</fullName>
    <label>% Canopy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>