test/force-app/main/default/objects/Assumption_Set__c/fields/Class_A_Advance_Rate__c.field-meta.xml
<CustomField>
    <fullName>Class_A_Advance_Rate__c</fullName>
    <label>Class A Advance Rate</label>
    <precision>8</precision>
    <scale>5</scale>
    <type>Percent</type>
</CustomField>