test/force-app/main/default/objects/Assumption_Set__c/fields/Class_B_Target_PTIRR__c.field-meta.xml
<CustomField>
    <fullName>Class_B_Target_PTIRR__c</fullName>
    <label>Class B Target PTIRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>