test/force-app/main/default/objects/Assumption_Set__c/fields/Corporate_Overhead_W__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Overhead_W__c</fullName>
    <label>Corporate Overhead ($/W)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>