test/force-app/main/default/objects/Assumption_Set__c/fields/Customer_WACC__c.field-meta.xml
<CustomField>
    <fullName>Customer_WACC__c</fullName>
    <label>Customer WACC</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>