test/force-app/main/default/objects/Assumption_Set__c/fields/Default__c.field-meta.xml
<CustomField>
    <fullName>Default__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This indicates that this assumption set is the default, used by the community and what new assumption sets are cloned from. If checked, it will automatically uncheck any other assumption set marked as default.</description>
    <inlineHelpText>This indicates that this assumption set is the default, used by the community and what new assumption sets are cloned from. If checked, it will automatically uncheck any other assumption set marked as default.</inlineHelpText>
    <label>Default</label>
    <type>Checkbox</type>
</CustomField>