test/force-app/main/default/objects/Assumption_Set__c/fields/Depreciation_Allocation__c.field-meta.xml
<CustomField>
    <fullName>Depreciation_Allocation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Depreciation Allocation</label>
    <referenceTo>Depreciation_Allocation__c</referenceTo>
    <relationshipLabel>Assumption Sets</relationshipLabel>
    <relationshipName>Assumption_Sets</relationshipName>
    <type>Lookup</type>
</CustomField>