test/force-app/main/default/objects/Assumption_Set__c/fields/DRO_Exit_Year__c.field-meta.xml
<CustomField>
    <fullName>DRO_Exit_Year__c</fullName>
    <label>DRO Exit Year</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>