test/force-app/main/default/objects/Assumption_Set__c/fields/DRO_Limit_Cash_Equity__c.field-meta.xml
<CustomField>
    <fullName>DRO_Limit_Cash_Equity__c</fullName>
    <label>DRO Limit - Cash Equity $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>