test/force-app/main/default/objects/Assumption_Set__c/fields/Extra_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Extra_Depreciation__c</fullName>
    <label>Extra Depreciation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>