test/force-app/main/default/objects/Assumption_Set__c/fields/Flip_Deal__c.field-meta.xml
<CustomField>
    <fullName>Flip_Deal__c</fullName>
    <label>Flip Deal?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>