test/force-app/main/default/objects/Assumption_Set__c/fields/Funding_at_NTP__c.field-meta.xml
<CustomField>
    <fullName>Funding_at_NTP__c</fullName>
    <label>Funding at NTP</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>