test/force-app/main/default/objects/Assumption_Set__c/fields/Groundmount_percentage__c.field-meta.xml
<CustomField>
    <fullName>Groundmount_percentage__c</fullName>
    <label>% Groundmount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>