test/force-app/main/default/objects/Assumption_Set__c/fields/HLBV_for_GAAP_Income__c.field-meta.xml
<CustomField>
    <fullName>HLBV_for_GAAP_Income__c</fullName>
    <label>HLBV for GAAP Income?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>