test/force-app/main/default/objects/Assumption_Set__c/fields/Income_Available_Cash_Equity_post_flip__c.field-meta.xml
<CustomField>
    <fullName>Income_Available_Cash_Equity_post_flip__c</fullName>
    <label>Income Available (Cash Equity post-flip)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>