test/force-app/main/default/objects/Assumption_Set__c/fields/Income_Available_Cash_Equity_pre_flip__c.field-meta.xml
<CustomField>
    <fullName>Income_Available_Cash_Equity_pre_flip__c</fullName>
    <description>Income Available for Allocation to Cash Equity (pre-flip)</description>
    <inlineHelpText>Income Available for Allocation to Cash Equity (pre-flip)</inlineHelpText>
    <label>Income Available  (Cash Equity pre-flip)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>