test/force-app/main/default/objects/Assumption_Set__c/fields/Income_Available_Structured_Equity__c.field-meta.xml
<CustomField>
    <fullName>Income_Available_Structured_Equity__c</fullName>
    <description>Income Available for Allocation to Structured Equity</description>
    <inlineHelpText>Income Available for Allocation to Structured Equity</inlineHelpText>
    <label>Income Available (Structured Equity)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>