test/force-app/main/default/objects/Assumption_Set__c/fields/Income_Reallocation__c.field-meta.xml
<CustomField>
    <fullName>Income_Reallocation__c</fullName>
    <label>Income Reallocation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>On</fullName>
            </value>
            <value>
                <fullName>Off</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>