test/force-app/main/default/objects/Assumption_Set__c/fields/Income_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>Income_Tax_Rate__c</fullName>
    <label>Income Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>