test/force-app/main/default/objects/Assumption_Set__c/fields/Inside_Basis__c.field-meta.xml
<CustomField>
    <fullName>Inside_Basis__c</fullName>
    <label>Inside Basis</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>