test/force-app/main/default/objects/Assumption_Set__c/fields/Insurance_Deflation__c.field-meta.xml
<CustomField>
    <fullName>Insurance_Deflation__c</fullName>
    <label>Insurance Deflation</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>