test/force-app/main/default/objects/Assumption_Set__c/fields/Inverter_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Replacement_Cost__c</fullName>
    <label>Inverter Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>