test/force-app/main/default/objects/Assumption_Set__c/fields/Inverter_Replacement_Freq__c.field-meta.xml
<CustomField>
    <fullName>Inverter_Replacement_Freq__c</fullName>
    <label>Inverter Replacement Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>