test/force-app/main/default/objects/Assumption_Set__c/fields/Max_DRO__c.field-meta.xml
<CustomField>
    <fullName>Max_DRO__c</fullName>
    <label>Max DRO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>