test/force-app/main/default/objects/Assumption_Set__c/fields/Max_Period_Handling__c.field-meta.xml
<CustomField>
    <fullName>Max_Period_Handling__c</fullName>
    <label>Max Period Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>