test/force-app/main/default/objects/Assumption_Set__c/fields/Meter_Replacement_Cost__c.field-meta.xml
<CustomField>
    <fullName>Meter_Replacement_Cost__c</fullName>
    <label>Meter Replacement Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>