test/force-app/main/default/objects/Assumption_Set__c/fields/Min_Period_Handling_Years__c.field-meta.xml
<CustomField>
    <fullName>Min_Period_Handling_Years__c</fullName>
    <label>Min Period Handling (Years)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>