test/force-app/main/default/objects/Assumption_Set__c/fields/No_of_Years_Post_COD__c.field-meta.xml
<CustomField>
    <fullName>No_of_Years_Post_COD__c</fullName>
    <label>No. of Years Post COD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>