test/force-app/main/default/objects/Assumption_Set__c/fields/NonDepreciable_Assets_Allocation__c.field-meta.xml
<CustomField>
    <fullName>NonDepreciable_Assets_Allocation__c</fullName>
    <label>Non-Depreciable Assets (Allocation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>