test/force-app/main/default/objects/Assumption_Set__c/fields/NonDepreciable_Assets_Method__c.field-meta.xml
<CustomField>
    <fullName>NonDepreciable_Assets_Method__c</fullName>
    <label>Non-Depreciable Assets (Method)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>