test/force-app/main/default/objects/Assumption_Set__c/fields/O_M_Escalator__c.field-meta.xml
<CustomField>
    <fullName>O_M_Escalator__c</fullName>
    <label>O&amp;M Escalator</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>