test/force-app/main/default/objects/Assumption_Set__c/fields/P50__c.field-meta.xml
<CustomField>
    <fullName>P50__c</fullName>
    <label>P50</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>