test/force-app/main/default/objects/Assumption_Set__c/fields/P75__c.field-meta.xml
<CustomField>
    <fullName>P75__c</fullName>
    <label>P75</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>