test/force-app/main/default/objects/Assumption_Set__c/fields/P90__c.field-meta.xml
<CustomField>
    <fullName>P90__c</fullName>
    <label>P90</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>