test/force-app/main/default/objects/Assumption_Set__c/fields/Pref_Cash_of_Pre_Flip_Distribution__c.field-meta.xml
<CustomField>
    <fullName>Pref_Cash_of_Pre_Flip_Distribution__c</fullName>
    <label>Pref Cash % (of Pre-Flip Distribution %)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>