test/force-app/main/default/objects/Assumption_Set__c/fields/Preferred_Cash_OnOff__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Cash_OnOff__c</fullName>
    <label>Preferred Cash On/Off</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>