test/force-app/main/default/objects/Assumption_Set__c/fields/PreTax_Handling_Longterm_hold__c.field-meta.xml
<CustomField>
    <fullName>PreTax_Handling_Longterm_hold__c</fullName>
    <label>Pre-Tax Handling - Long-term (hold)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>