test/force-app/main/default/objects/Assumption_Set__c/fields/PreTax_Handling_Shortterm_sell__c.field-meta.xml
<CustomField>
    <fullName>PreTax_Handling_Shortterm_sell__c</fullName>
    <label>Pre-Tax Handling - Short-term (sell)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>