test/force-app/main/default/objects/Assumption_Set__c/fields/PreTax_Loss__c.field-meta.xml
<CustomField>
    <fullName>PreTax_Loss__c</fullName>
    <label>Pre-Tax Loss</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>