test/force-app/main/default/objects/Assumption_Set__c/fields/Project_level_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Project_level_Discount_Rate__c</fullName>
    <label>Project level Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>