test/force-app/main/default/objects/Assumption_Set__c/fields/QIO_Taxed__c.field-meta.xml
<CustomField>
    <fullName>QIO_Taxed__c</fullName>
    <label>QIO Taxed?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>