test/force-app/main/default/objects/Assumption_Set__c/fields/Quarterly_ITC_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Quarterly_ITC_Schedule__c</fullName>
    <label>Quarterly ITC Schedule</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>