test/force-app/main/default/objects/Assumption_Set__c/fields/Reduce_DRO_Postflip__c.field-meta.xml
<CustomField>
    <fullName>Reduce_DRO_Postflip__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce DRO Postflip</label>
    <type>Checkbox</type>
</CustomField>