test/force-app/main/default/objects/Assumption_Set__c/fields/Residual_Phase_Income__c.field-meta.xml
<CustomField>
    <fullName>Residual_Phase_Income__c</fullName>
    <label>Residual Phase (Income)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>