test/force-app/main/default/objects/Assumption_Set__c/fields/Seasonality_Q2__c.field-meta.xml
<CustomField>
    <fullName>Seasonality_Q2__c</fullName>
    <label>Seasonality (Q2)</label>
    <precision>11</precision>
    <scale>8</scale>
    <type>Percent</type>
</CustomField>