test/force-app/main/default/objects/Assumption_Set__c/fields/Structured_Finance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Structured_Finance_Notes__c</fullName>
    <label>Structured Finance Notes</label>
    <type>TextArea</type>
</CustomField>