test/force-app/main/default/objects/Assumption_Set__c/fields/Target_Project_Rate_IRR__c.field-meta.xml
<CustomField>
    <fullName>Target_Project_Rate_IRR__c</fullName>
    <label>Target Project Rate IRR</label>
    <precision>15</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>