test/force-app/main/default/objects/Assumption_Set__c/fields/Total_Equity_Capital_Transaction_Costs__c.field-meta.xml
<CustomField>
    <fullName>Total_Equity_Capital_Transaction_Costs__c</fullName>
    <label>Total Equity Capital Transaction Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>