test/force-app/main/default/objects/Assumption_Set__c/fields/Underlying_DRO__c.field-meta.xml
<CustomField>
    <fullName>Underlying_DRO__c</fullName>
    <label>Underlying DRO</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>