test/force-app/main/default/objects/Assumption_Set__c/fields/Upfront_Incentives_to_Cash_Investor__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Incentives_to_Cash_Investor__c</fullName>
    <label>Upfront Incentives to Cash Investor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Off</fullName>
            </value>
            <value>
                <fullName>On</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>