test/force-app/main/default/objects/Assumption_Set__c/fields/Weighted_Average_DCF_Discount_Rate__c.field-meta.xml
<CustomField>
    <fullName>Weighted_Average_DCF_Discount_Rate__c</fullName>
    <label>Weighted Average DCF Discount Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>