test/force-app/main/default/objects/Assumption_Set__c/fields/X15_Years_Allocation_2__c.field-meta.xml
<CustomField>
    <fullName>X15_Years_Allocation_2__c</fullName>
    <label>15 Years (Allocation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>