test/force-app/main/default/objects/Assumption_Set__c/fields/X20_Years_Allocation__c.field-meta.xml
<CustomField>
    <fullName>X20_Years_Allocation__c</fullName>
    <label>20 Years (Allocation)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>