test/force-app/main/default/objects/Assumption_Set__c/fields/X9_Years_Methodtext__c.field-meta.xml
<CustomField>
    <fullName>X9_Years_Methodtext__c</fullName>
    <label>29 Years (Method)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>