test/force-app/main/default/objects/Assumption_Set__c/fields/Xtra_Depreciation__c.field-meta.xml
<CustomField>
    <fullName>Xtra_Depreciation__c</fullName>
    <label>Xtra Depreciation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Post</fullName>
            </value>
            <value>
                <fullName>Pre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>