test/force-app/main/default/objects/Assumption_Set__c/fields/Year_One_Yield__c.field-meta.xml
<CustomField>
    <fullName>Year_One_Yield__c</fullName>
    <label>Year One Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>