test/force-app/main/default/objects/Assumption_Set__c/fields/Year_Second_Rate_Effective__c.field-meta.xml
<CustomField>
    <fullName>Year_Second_Rate_Effective__c</fullName>
    <label>Year Second Rate Effective</label>
    <type>Date</type>
</CustomField>