test/force-app/main/default/objects/Assumption_Set__c/fields/Years_of_LH_Charge__c.field-meta.xml
<CustomField>
    <fullName>Years_of_LH_Charge__c</fullName>
    <label>Years of L&amp;H Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>